Fix a segfault in gtk_statusbar_remove_all

https://bugzilla.gnome.org/show_bug.cgi?id=640487